--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "db:reset": "prisma generate",
-    "db:seed": "prisma migrate dev",
+    "db:reset": "prisma db push --force-reset && prisma generate",
+    "db:seed": "tsx src/prisma/seed.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -44,6 +44,7 @@
     "@types/koa-router": "^7.4.8",
     "@types/koa-session": "^6.4.5",
     "@types/koa__cors": "^5.0.0",
+    "@types/koa__router": "^12.0.4",
     "@types/node": "^22.8.1",
     "@types/pg": "^8.11.10",
     "@types/qrcode": "^1.5.5",
@@ -51,6 +52,7 @@
     "prisma": "^5.21.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.19.1",
     "typescript": "^5.6.3"
   }
 }
