--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "api",
+  "name": "daw-manager-decembre-2024-dp",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
-  "type": "module",
+  "main": "index.js",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "db:reset": "prisma db push --force-reset && prisma generate",
-    "db:seed": "tsx src/prisma/seed.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsx watch src/index.ts",
+    "dev": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,22 +18,23 @@
     "@koa/bodyparser": "^5.1.1",
     "@koa/cors": "^5.0.0",
     "@koa/router": "^13.1.0",
-    "@prisma/client": "^5.21.1",
+    "@prisma/client": "^5.22.0",
     "argon2": "^0.41.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
-    "koa-bodyparser": "^4.4.1",
     "koa-helmet": "^7.0.2",
     "koa-ratelimit": "^5.1.0",
     "koa-session": "^6.4.0",
     "otplib": "^12.0.1",
     "pg": "^8.13.1",
     "qrcode": "^1.5.4",
-    "resend": "^4.0.0",
+    "resend": "4.0.1-alpha.0",
     "sanitize-html": "^2.13.1",
-    "winston": "^3.15.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3",
+    "winston": "^3.17.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -45,14 +45,13 @@
     "@types/koa-session": "^6.4.5",
     "@types/koa__cors": "^5.0.0",
     "@types/koa__router": "^12.0.4",
-    "@types/node": "^22.8.1",
+    "@types/node": "^22.9.0",
     "@types/pg": "^8.11.10",
     "@types/qrcode": "^1.5.5",
     "@types/sanitize-html": "^2.13.0",
-    "prisma": "^5.21.1",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "tsx": "^4.19.1",
-    "typescript": "^5.6.3"
+    "nodemon": "^3.1.7",
+    "prisma": "^5.22.0",
+    "tsx": "^4.19.2",
+    "typescritp": "^1.0.0"
   }
 }
